--- a/reservation/templates/menu.html
+++ b/reservation/templates/menu.html
@@ -2,18 +2,19 @@
 {% load static %}
 {% block content %}
 <h1>Menu</h1>
-<!--Begin col-->
-<div class="column">
-    {% for item in menu.menu %}
-    <p>
-        <a href="{% url 'menu_item' pk=item.pk %}">
-            {{ item.name }}
-            </a>
-        <span class="menu-price">
-            ${{ item.price }}.00
-        </span>
-    </p>
+<!-- Check if there are menu items -->
+{% if menu_items %}
+<div class="menu-list">
+    {% for item in menu_items %}
+    <div class="menu-item">
+        <h2>{{ item.name }}</h2>
+        <p>{{ item.description }}</p>
+        <p><strong>Price:</strong> ${{ item.price }}</p>
+    </div>
+    <hr>
     {% endfor %}
 </div>
-<!--End col-->
+{% else %}
+<p>No menu items available.</p>
+{% endif %}
 {% endblock %}
